--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@google/generative-ai": "^0.24.1",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.575.0",
-    "next": "15.1.0",
+    "next": "^16.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
